# osmium-solidity

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  remove-me-047153848fb24efd8b50.txt  remove-me-0e6e28c5125849a4ae3b.txt  remove-me-1320c6f45df8494aaa8a.txt  remove-me-13c29ae262d743bd95b9.txt  remove-me-3708aad9983848beb655.txt  remove-me-3769ba3f439c4a4bbc4c.txt  remove-me-37f74ae488514ffb9c20.txt  remove-me-3c8a42073b144fce99bb.txt  remove-me-480ca193fd104813baa3.txt  remove-me-49743ff53ccb4ebdb0f1.txt  remove-me-4d7b1ac179184057980c.txt  remove-me-506b2ef3611c47bd9a79.txt  remove-me-51e233d96f1a45b08218.txt  remove-me-56a338ce2a1742398a48.txt  remove-me-5d938914661241648abb.txt  remove-me-5ea4b74fa0b6494c9fd5.txt  remove-me-5f237fe550774478a9c1.txt  remove-me-60426532ea4d4c93b206.txt  remove-me-686ce58a15ce425ea533.txt  remove-me-70de72efa4e942e9940b.txt  remove-me-7384a705bd0e4ec49eb0.txt  remove-me-743761a8d5804ec7939f.txt  remove-me-7512fb523e4d411b9572.txt  remove-me-7600dafc6d0849d88554.txt  remove-me-7bd553fa36de46b8bc6c.txt  remove-me-7cfe84e979c84f1990ae.txt  remove-me-802bcd6fee614462b942.txt  remove-me-8b5fea6ea54249e2b3d0.txt  remove-me-8d6080ba93d94de4a8b9.txt  remove-me-8e99d6014e4246b5b7f0.txt  remove-me-934b71c0c08c44c28423.txt  remove-me-a528dc46ae6145a9bf74.txt  remove-me-b33d0c0aa7f44f33a6b3.txt  (+24 more)
libs/ast-extractor/: Cargo.toml  README.md  package.json
libs/ast-extractor/src/: errors.rs  extract.rs  lib.rs  retriever.rs  types.rs
libs/ast-extractor/src/extract/: foundry.rs  slang.rs
libs/ast-extractor/src/retriever/: block.rs  contract.rs  enum.rs  error.rs  event.rs  expr_call.rs  expr_member.rs  finder.rs  function.rs  import_directive.rs  stmts.rs  struct.rs  udt.rs  using.rs  variable_declaration.rs  variable_definition.rs
libs/ast-extractor/tests/files/: good.sol
libs/code-actions/: Cargo.toml  package.json
libs/code-actions/src/: code_actions_provider.rs  completions.rs  error.rs  lib.rs  references.rs  test_utils.rs  types.rs  utils.rs
libs/code-actions/src/completions/: auto_complete_provider.rs  imports_completion_visitor.rs  inheritence_completion_visitor.rs  position_scope_visitor.rs  spi_completion_provider.rs
libs/code-actions/src/references/: definition_visitor.rs  position_node_visitor.rs  reference_provider.rs  usage_visitor.rs
libs/foundry-wrapper/: Cargo.toml  package.json
libs/foundry-wrapper/src/: compiler.rs  error.rs  lib.rs  output.rs  types.rs  utils.rs
libs/foundry-wrapper/src/utils/: executable.rs  path.rs
libs/lsp-server-wrapper/: Cargo.toml  package.json
libs/lsp-server-wrapper/src/: client.rs  jsonrpc.rs  lib.rs  server.rs  service.rs
libs/lsp-utils/: Cargo.toml  package.json
libs/lsp-utils/src/: lib.rs  log.rs
libs/path-utils/: Cargo.toml  package.json
libs/path-utils/src/: lib.rs
libs/solc-references/: Cargo.toml  package.json
libs/solc-references/src/: definitions.rs  error.rs  lib.rs  node_finder.rs  types.rs  usages.rs  utils.rs
libs/solidhunter/: Cargo.toml  package.json
libs/solidhunter/src/: aggregate.rs  errors.rs  ignore.rs  lib.rs  linter.rs  types.rs
libs/solidhunter/src/rules/: factory.rs  mod.rs  rule_impl.rs  types.rs  utils.rs
libs/solidhunter/src/types/: file_diags.rs  ignore.rs  lint_diag.rs  position.rs  range.rs  severity.rs
libs/solidhunter/testdata/AvoidTxOrigin/: file.sol  findings.csv
libs/solidhunter/testdata/ConstNameSnakeCase/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/ContractNameCamelCase/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/CustomErrors/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/EventNameCamelCase/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/ExplicitTypes/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/FoundryTestFunctions/: .solidhunter.json  file.t.sol  findings.csv
libs/solidhunter/testdata/FunctionMaxLines/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/FunctionNameMixedCase/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/FunctionParamNameMixedCase/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/FunctionVisibility/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/ImplicitTypes/: .solidhunter.json  findings.csv
libs/solidhunter/testdata/ImportOnTop/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/MaxLineLength/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/MaxStatesCount/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/ModifierNameMixedcase/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/NamedParametersMapping/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/NoConsole/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/NoEmptyBlock/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/NoGlobalImport/: .solidhunter.json  add.sol  file.sol  findings.csv
libs/solidhunter/testdata/NoInlineAssembly/: .solidhunter.json  file.sol  findings.csv
libs/solidhunter/testdata/NotRelyOnTime/: .solidhunter.json  file.sol  (+1 more)
libs/solidhunter/tests/: linter.rs
servers/foundry-compiler-server/: Cargo.toml  Makefile  package.json
servers/foundry-compiler-server/src/: affected_files_store.rs  main.rs  utils.rs
servers/foundry-debugger-server/: Cargo.toml  package.json
servers/foundry-debugger-server/src/: dap.rs  main.rs
servers/linter-server/: Cargo.toml  package.json
servers/linter-server/src/: get_content.rs  main.rs  utils.rs
servers/references-server/: Cargo.toml  package.json
servers/references-server/src/: main.rs  utils.rs
servers/slither-server/: Cargo.toml  package.json  test.json
servers/slither-server/src/: error.rs  main.rs  slither.rs  types.rs  utils.rs
servers/tests-positions-server/: Cargo.toml  package.json
servers/tests-positions-server/src/: get_tests_positions.rs  main.rs  utils.rs
(+261 files in other folders)
