[package]
name = "osmium-libs-solidity-code-actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solc-ast-rs-types = { version = "0.1.6", features = ["visit"]}
osmium-libs-solidity-ast-extractor = { path="../ast-extractor" }
osmium-libs-solidity-path-utils = { path = "../../libs/path-utils" }
thiserror = "1.0.56"
log = "0.4.21"
