[package]
name = "osmium-libs-foundry-wrapper"
version = "0.1.0"
edition = "2021"
authors = ["Astrodevs-Labs"]
description = "Foundry abstractions for all extensions"
license = "GPL-3.0-or-later"
repository = "https://github.com/astrodevs-labs/osmium"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glob = "0.3.1"
clap = "4.4.8"
thiserror = "1.0.50"
which = "5.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.108"
