[package]
name = "solidhunter"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "solidhunter"
path = "src/lib.rs"

[[bin]]
name = "solidhunter"
path = "bin/main.rs"

[dependencies]
osmium-libs-solidity-ast-extractor = { path = "../ast-extractor", version = "0.1.3" }
clap = { version = "4.5.1", features = ["derive"] }
colored = "2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.89"
anyhow = "1.0"
glob = "0.3.1"
thiserror = "1.0"
regex = "1.9.6"