[package]
name = "foundry-compiler-server"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmium-libs-solidity-foundry-wrapper = { path = "../../libs/foundry-wrapper" }
tower-lsp = "0.20.0"
tokio = { version = "1.34.0", features = ["full"] }