[package]
name = "references-server"
license = "GPL-3.0-or-later"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0",  features = ["full"] }
tower-lsp = "0.20.0"
solc-references = { path = "../../libs/solc-references" }
glob = "0.3.1"
