[package]
name = "references-server"
license = "GPL-3.0-or-later"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0",  features = ["full"] }
tower-lsp = "0.20.0"
osmium-libs-solidity-references = { path = "../../libs/references" }
glob = "0.3.1"
osmium-libs-solidity-path-utils = { path = "../../libs/path-utils" }
osmium-libs-solidity-lsp-utils = { path = "../../libs/lsp-utils" }