[package]
name = "slither-server"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os = "0.1.0"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
tokio = { version="1.34.0", features = ["full"] }
tower-lsp = "0.20.0"
colored = "2.0.4"
thiserror = "1.0.50"
glob = "0.3.1"
toml = "0.8.8"
tokio-util = "0.7.10"
osmium-libs-solidity-path-utils = { path = "../../libs/path-utils" }
